# ESP32C3_JLC_DM

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  WIFI_PROVISIONING.md
backup/: NtcAdcScreenDHT22 copy1.c  NtcAdcScreenDHT22 copy2.c  NtcAdcScreenDHT22 copy3.c  NtcAdcScreenDHT22 copy4.c  NtcAdcScreenDHT22 copy5.c  NtcAdcScreenDHT22 copy6.c
components/cjson/: cJSON.c
main/: CMakeLists.txt  NtcAdcScreenDHT22.c  NtcAdcScreenDHT22.h  OLED.c  OLED.h  OLED_Data.c  OLED_Data.h  dht22.c  index.html  ntc.c  simple_wifi_sta.c  simple_wifi_sta.h  wifi_provisioning.c  wifi_provisioning.h
